<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_exploder"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="8dp"
    android:baselineAligned="false">
    
    <RelativeLayout android:id="@+id/hours"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:padding="1dp">
        
        <ImageView android:id="@+id/h1_8" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            android:contentDescription="@string/empty"
            android:src="@null" 
            android:visibility="invisible" />
        <ImageView android:id="@+id/h0_8"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_toRightOf="@id/h1_8"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/h1_4" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/h1_8"
            
            android:contentDescription="@string/empty"
            android:src="@null" 
            android:visibility="invisible" />
        <ImageView android:id="@+id/h0_4"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/h0_8"
            android:layout_toRightOf="@id/h1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/h1_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/h1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        <ImageView android:id="@+id/h0_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/h0_4"
            android:layout_toRightOf="@id/h1_2"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/h1_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/h1_2"
            
            android:contentDescription="@string/off"
            android:src="@drawable/bymaurycy_black_off" />        
        <ImageView android:id="@+id/h0_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
			android:layout_below="@id/h0_2"
			android:layout_toRightOf="@id/h1_1"

            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
                
    </RelativeLayout>

    <RelativeLayout android:id="@+id/minutes"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:padding="1dp"
        android:gravity="center">
        
        <ImageView android:id="@+id/m1_8" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            android:contentDescription="@string/empty"
            android:src="@null" 
            android:visibility="invisible" />
        <ImageView android:id="@+id/m0_8"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_toRightOf="@id/m1_8"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/m1_4" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/m1_8"
            
            android:contentDescription="@string/empty"
            android:src="@drawable/bymaurycy_black_off" />
        <ImageView android:id="@+id/m0_4"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/m0_8"
            android:layout_toRightOf="@id/m1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/m1_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/m1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        <ImageView android:id="@+id/m0_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/m0_4"
            android:layout_toRightOf="@id/m1_2"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/m1_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/m1_2"
            
            android:contentDescription="@string/off"
            android:src="@drawable/bymaurycy_black_off" />        
        <ImageView android:id="@+id/m0_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
			android:layout_below="@id/m0_2"
			android:layout_toRightOf="@id/m1_1"

            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
               
    </RelativeLayout>

    <RelativeLayout android:id="@+id/seconds"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:padding="1dp"
        android:gravity="left|center_vertical">
        
        <ImageView android:id="@+id/s1_8" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            android:contentDescription="@string/empty"
            android:src="@null" 
            android:visibility="invisible" />
        <ImageView android:id="@+id/s0_8"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_toRightOf="@id/s1_8"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/s1_4" 
            android:layout_height="@dimen/square"
            android:layout_width="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/s1_8"
            
            android:contentDescription="@string/empty"
            android:src="@drawable/bymaurycy_black_off" />
        <ImageView android:id="@+id/s0_4"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/s0_8"
            android:layout_toRightOf="@id/s1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/s1_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/s1_4"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        <ImageView android:id="@+id/s0_2"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"

            android:layout_below="@id/s0_4"
            android:layout_toRightOf="@id/s1_2"
            
            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
        
        <ImageView android:id="@+id/s1_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
            android:layout_below="@id/s1_2"
            
            android:contentDescription="@string/off"
            android:src="@drawable/bymaurycy_black_off" />        
        <ImageView android:id="@+id/s0_1"
            android:layout_width="@dimen/square"
            android:layout_height="@dimen/square"
            android:layout_margin="@dimen/spacing"
            
			android:layout_below="@id/s0_2"
			android:layout_toRightOf="@id/s1_1"

            android:contentDescription="@string/on"
            android:src="@drawable/bymaurycy_black_off" />
                
    </RelativeLayout>
</LinearLayout>